--- a/_2017_pages/about.html
+++ b/_2017_pages/about.html
@@ -1,7 +1,7 @@
 ---
 layout: 2017_default
 permalink: /about
-title: About the Conference
+title: Sobre a semana
 ---
     <!--background color-->
     <script type="text/javascript">
@@ -11,35 +11,30 @@ title: About the Conference
     <section id="conference" class="black-frame about about-container about-container-top">
       <h1>{{ page.title }}</h1>
 
-      <div class="icon-about">
-        <img src="../css/2017_style/img/TBD.jpeg" alt="icon-about">
-      </div>
+      <h2 class="second">Tema</h2>
 
-      <h2 class="second">Theme</h2>
+      <p>Em 2018, o tema da SEMATIF será matemática aplicada e educação matemática.</p>
 
-      <p>Your Theme</p>
+      <h2 class="third">Missão</h2>
 
-      <h2 class="third">Mission</h2>
+      <p>Prover conhecimento sobre matemática em diversos níveis e praticar a extensão universitária, agregrando valor aos profissionais da área e a todos interessados nos temas desenvolvidos.</p>
 
-      <p>Your Mission</p>
+      <h2 class="second">Visão</h2>
 
-      <h2 class="second">Vision</h2>
-
-      <p>Your Vision</p>
+      <p>Esperamos que a longo prazo todos os profissionais da matemática e áreas afins da região de Itapetininga-SP possam se beneficiar dessa semana científica. Acreditamos que a interação direta de 
+alunos com Professores e profissionais convidados cria um ambiente propício para o desenvolvimento de autocrítica, para esclarecer dúvidas diversas e para ampliar a rede de contatos.</p>
       
-      <h2 class="first">Objectives</h2>
+      <h2 class="first">Objetivos</h2>
 
-      <p>Your Objective</p>
+      <p>Os principais objetivos dessa semana científica são: proporcionar aos alunos um momento de interação com profissionais em carreiras bem consolidadas; abrir as portas do IFSP para a comunidade ter a oportunidade de realizar minicursos e assistir palestras na área da matemática; promover "networking" entre todos os participantes envolvidos.</p>
     </section>
 
     <section id="fourth" class="black-frame about about-container">
-      <h1>Title</h1>
+      <h1>Título do evento: 2ª SEMATIF</h1>
 
-      <p>More</p>
-    </section>
-
-    <section id="fifth" class="black-frame about about-container about-container-bottom">
-      <h1>About</h1>
-
-      <p>Info</p>
+      <p>2ª Semana da Matemática do Instituto Federal de Educação, Ciência e Tecnologia de São Paulo. 
+      <div>  Campus Itapetininga.
+      <div>  Realização: de 16 a 19 de Outubro de 2018.
+      <div>  Campus IFSP-Itapetininga.
+      <div>  Inscrições no site do Worktech. </p>
     </section>
