--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -12,7 +12,7 @@ published: true
     <div class="event black-frame">
       <h1 class="title">{{ page.title }}</h1>
 
-      <p>Below is a list of Frequently Asked Questions (FAQ).<p>
+      <p>Abaixo segue uma lista de perguntas frequentemente respondidas.<p>
         <ol>
             {% for faq in site.data.twenty_17.faqs %}
                 <li><b>{{ faq.question }}</b>
@@ -21,7 +21,7 @@ published: true
             {% endfor %}
         </ol>
         <p>
-            For further enquiries, kindly submit your question via the <a href="/#contacts">contact us</a> 
-            page or send us an email at <a href="mailto:hello.world@gmail.com">hello.world@gmail.com</a> 
+            Para outras dúvidas, entre em contato via página <a href="/#contacts">Contato</a> 
+            ou envie um email para <a href="mailto:oliveira.rafael@ifsp.edu.br">oliveira.rafael@ifsp.edu.br</a> 
         </p>
     </div>
