--- a/_2017_pages/venue.html
+++ b/_2017_pages/venue.html
@@ -1,7 +1,7 @@
 ---
 layout: 2017_default
 permalink: /venue
-title: Venue
+title: Localização
 published: true
 ---
     <!--background color-->
@@ -12,15 +12,10 @@ published: true
     <div class="event black-frame">
       <h1>{{ page.title }}</h1>
 
-      <p>Date<br>Venue</p>
+      <p>Local: IFSP, campus Itapetininga/SP<br>Data: 16 a 19 de Outubro de 2018</p>
 
     <div class="venue-map">
-      <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=Space+Needle,Seattle+WA" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.2931471923357!2d-48.02074314996756!3d-23.593817384591553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c5cbf41ebfcf31%3A0xa65e4fb6d75446bf!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+de+S%C3%A3o+Paulo%2C+Campus+Itapetininga!5e0!3m2!1spt-BR!2sbr!4v1536849060767" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
-      <p>Info</p>
-
-      <p>Address</p>
-
-      <p>Location</p>
     </div>
