--- a/_2017_pages/booklet.html
+++ b/_2017_pages/booklet.html
@@ -1,11 +1,11 @@
 ---
 layout: 2017_pdf
 permalink: /booklet
-title: "Event Booklet"
+title: "Cartaz do evento"
 published: true
 ---
 <script type="text/javascript">
     document.write ('<body style="padding-bottom:0px;">')
 </script>
 
-<iframe src="https://docs.google.com/file/d/0Bw6415LzTLuVZFo2RHowN3N5dEE/preview" style="height:100vh;width:100vw;"></iframe>
+<iframe src="https://drive.google.com/file/d/1B2EpeYi6s-ExYudhxjK475AloSbXI5e2/preview" width="640" height="480"></iframe>
