atualizacao das salas e da visualizacao do cartaz

--- a/_2017_pages/booklet.html
+++ b/_2017_pages/booklet.html
@@ -8,4 +8,5 @@ published: true
     document.write ('<body style="padding-bottom:0px;">')
 </script>
 
-<iframe src="https://drive.google.com/file/d/1B2EpeYi6s-ExYudhxjK475AloSbXI5e2/preview" width="640" height="480"></iframe>
+<!-- <iframe src="https://drive.google.com/open?id=1B2EpeYi6s-ExYudhxjK475AloSbXI5e2"></iframe> -->
+<a href="../css/2017_style/img/cartaz.pdf" target="_blank">CLIQUE AQUI PARA VISUALIZAR OU FAZER O DOWNLOAD</a>
